tests/lean/find.lean
(* import("find.lua") *)
Find "^.ongr"
Find "foo"
Find "(ab"